--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,18 @@
 {
-    "name": "programmer-zaman-now/pbd-login-management",
-    "description": "pbd-login-management",
+    "name": "programmer-zaman-now/php-login-management",
+    "description": "PHP Login Management",
     "type": "project",
     "authors": [
         {
-            "name": "kelompok 1",
-            "email": "kelompok1@gmail.com"
+            "name": "Eko Kurniawan Khannedy",
+            "email": "echo.khannedy@gmail.com"
         }
     ],
     "require": {
-        "php" : ">=8",
-        "ext-pdo": "*"
+        "php" : ">=8"
     },
     "require-dev": {
-        "phpunit/phpunit": "9.5.8",
-        "ext-mysql_xdevapi": "*"
+        "phpunit/phpunit": "9.5.8"
     },
     "autoload": {
         "psr-4": {
